force-app/main/default/objects/Qantas_Freight_ContactUsForm__e/Qantas_Freight_ContactUsForm__e.object-meta.xml
<CustomObject>
    <description>This platform event is being used for sending IDs of the Contact US form so that attachments can be linked to the Salesforce case.</description>
    <label>Qantas Freight ContactUsForm</label>
    <pluralLabel>Qantas Freight ContactUsForms</pluralLabel>
</CustomObject>