force-app/main/default/objects/Qantas_Freight_ContactUsForm__e/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>