force-app/main/default/objects/Qantas_Freight_ContactUsForm__e/fields/Case_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Salesforce_ID__c</fullName>
    <label>Case Salesforce ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>