force-app/main/default/objects/Qantas_Freight_ContactUsForm__e/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <label>References</label>
    <length>255</length>
    <type>Text</type>
</CustomField>